--- a/package.json
+++ b/package.json
@@ -15,11 +15,14 @@
     "dayjs": "^1.11.13",
     "firebase": "^11.0.1",
     "framer-motion": "^11.11.9",
+    "i18next": "^25.2.1",
+    "i18next-browser-languagedetector": "^8.2.0",
     "leaflet": "^1.9.4",
     "mobx": "^6.13.5",
     "mobx-react-lite": "^4.0.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-i18next": "^15.5.3",
     "react-intersection-observer": "^9.13.1",
     "react-leaflet": "^4.2.1",
     "react-router-dom": "^6.27.0",
